# v8

./: .gitignore  README.markdown  v8.cabal
cbits/: context.cpp  js.cpp  value.cpp
src/: Util.hs
src/Foreign/JavaScript/: V8.hs
src/Foreign/JavaScript/V8/: Context.hs  Disposable.hs  Finalizer.hs  Value.hs
src/Language/JavaScript/: V8.hs
test/Foreign/JavaScript/: V8Spec.hs
test/Foreign/JavaScript/V8/: ContextSpec.hs  DisposableSpec.hs  FinalizerSpec.hs  ValueSpec.hs
test/Language/JavaScript/: V8Spec.hs
